--- a/packages/samples/webapp/view/App.view.xml
+++ b/packages/samples/webapp/view/App.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-	controllerName="ui5.typescript.helloworld.controller.App"
+	controllerName="dev.carlosorozco.ui5Extra.samples.controller.App"
 	displayBlock="true"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
