--- a/packages/samples/webapp/view/Master.view.xml
+++ b/packages/samples/webapp/view/Master.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-	controllerName="ui5.typescript.helloworld.controller.Master"
+	controllerName="dev.carlosorozco.ui5Extra.samples.controller.Master"
 	xmlns="sap.m"
 	xmlns:semantic="sap.f.semantic"
 	xmlns:mvc="sap.ui.core.mvc">
