fix(packages/ui5-extra): fixed popup min height

--- a/packages/ui5-extra/src/dev/carlosorozco/ui5Extra/themes/base/Popup.less
+++ b/packages/ui5-extra/src/dev/carlosorozco/ui5Extra/themes/base/Popup.less
@@ -23,6 +23,7 @@
   pointer-events: all;
   width: auto;
   max-width: 100%;
+  min-height: 3rem;
   transition: 0.25s ease all;
   border-radius: 0.275rem;
   color: black;
