chore(Root): reorganization

--- a/apps/samples/webapp/view/Master.view.xml
+++ b/apps/samples/webapp/view/Master.view.xml
@@ -6,7 +6,7 @@
 
     <Page title="Controls">
         <List
-            items="{/Controls}"
+            items="{path:'/Controls',sorter:{path:'Name'}}"
             mode="{= ${device>/system/phone} ? 'None' : 'SingleSelectMaster'}"
             growing="true"
             growingScrollToLoad="true"
