--- a/apps/samples/webapp/view/Toast.view.xml
+++ b/apps/samples/webapp/view/Toast.view.xml
@@ -66,7 +66,7 @@
                 <VBox>
                     <Title text="Timing" />
                     <Button
-                        press=".defaults('Hide loadbar', { showLoader: false })"
+                        press=".defaults('Hide loadbar', { showLoadBar: false })"
                         text="Hide loadbar" />
                     <Button
                         press=".defaults('No autoclose', { duration: 0 })"
